# clintrialmatch

./: AMPLIFY_DEPLOYMENT.md  deploy-to-amplify.sh
backend/: .env  README.md  pyproject.toml  test_auth.py
backend/app/: __main__.py  main.py
backend/app/data/: users.json
backend/app/routes/: auth.py
backend/tests/: test_main.py
frontend/: amplify-deployment.md  amplify.yml  build-settings.json  middleware.ts  next.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend-react/: package-lock.json  package.json  tailwind.config.ts
frontend-react/app/: layout.tsx  page.tsx
frontend-react/app/about/: page.tsx
frontend-react/app/case-studies/: page.tsx
frontend-react/app/patient-login/: page.tsx
frontend-react/app/platform/: page.tsx
frontend-react/app/provider-login/: page.tsx
frontend-react/components/landing/: Cta.tsx  Features.tsx  Footer.tsx  MobileApp.tsx  Navbar.tsx  NavbarWrapper.tsx  (+1 more)
frontend-react/public/: iphone-app.html
frontend/app/: layout.tsx  page.tsx
frontend/helpers/: convert-images-to-webp.mjs
frontend/layouts/: landing.vue
frontend/middleware/: auth.js
frontend/pages/: 404.vue  WhatsNew.vue  about.vue  academy.vue  case-studies.vue  challenges.vue  company.vue  contact.vue  crops.vue  demo.vue  etfs.vue  index.vue  insights.vue  login.vue  newsletter.vue  partners.vue  platform.vue  playground.vue  pricing.vue  product.vue  products.vue  projects.vue  provider-login.vue  resources.vue  solutions.vue  volunteers.vue  who-we-serve.vue
frontend/plugins/: firebase.js  google-maps.js
(+32 files in other folders)
