[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A FastAPI backend project"
authors = ["Orynx Admin <admin@orynx.co.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.scripts]
start = "uvicorn:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
